Draft original smaller redesign, unfinished